Fix button text overflow

--- a/front-end/src/components/Header.module.css
+++ b/front-end/src/components/Header.module.css
@@ -49,5 +49,5 @@ button {
 }
 
 #theme_button {
-  width: 110px;
+  width: 120px;
 }
